# discord-notification-bot

./: .dockerignore  .gitignore  DOCKER.md  DOCKER_QUICK_START.md  Dockerfile  FLOW.md  GUIDES.md  README.md  TESTING.md  bot-with-notifications.js  docker-compose.yml  ecosystem.config.js  notifications.js  package-lock.json  package.json
.claude/: settings.local.json
.github/: RELEASE.md
.github/workflows/: build-release.yml
rust/: Cargo.toml
rust/src/: main.rs
rust/tests/: integration_test.rs
