[package]
name = "discord-notifications-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discord-notifications-rs"
path = "src/main.rs"

[dependencies]
twilight-gateway = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
futures = "0.3"
http = "1"
